k8s/node-cluser-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-cluster-ip-service
spec:
  type: ClusterIP
  selector:
      app: node
  ports:
    - port: 3050
      targetPort: 3000
