k8s/node-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-node-port
spec:
  type: NodePort
  ports:
    - nodePort: 30100
      port: 3000
      targetPort: 3000
      protocol: TCP
    
  selector:
    app: node
