k8s/node-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.test
    http:
      paths:
      - path: /
        backend:
          serviceName: node-cluster-ip-service
          servicePort: 3050
